0.67
    POD: drop "--" in front of the commands.
    refresh: ensure ->rules is there before attempting to fiddle quilt
        integration

    Add support for version relations in META

    Debian::Dependency now survives being given a string with leading spaces

    make: implement recursive making of missing dependencies when --recursive
        is given. (Debian bug #342751)

    FromCPAN: remove leading 'v' from versions

    add Debian::DpkgLists - 'dpkg -S' on steroids

    FromCPAN: use Debian::DpkgLists as a last resort. This allows finding
        dependencies that are present in locally-installed packages.
        (Debian bug #478781)