@@ -7,6 +7,7 @@ Build-Depends-Indep:
  libapt-pkg-perl,
  libarray-unique-perl,
  libclass-accessor-perl,
+ libdpkg-perl,
  libemail-date-format-perl,
  libfile-dircompare-perl,
  libfile-find-rule-perl,
@@ -47,6 +48,7 @@ Depends: debhelper (>= 7), ${perl:Depends}, ${misc:Depends},
  libapt-pkg-perl,
  libarray-unique-perl,
  libclass-accessor-perl,
+ libdpkg-perl,
  libemail-date-format-perl,
  liblist-moreutils-perl,
  perl (>= 5.10.1) | libmodule-corelist-perl (>= 2.14),
